manifests/jenkins/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins
  labels:
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/component: core
spec:
  type: LoadBalancer
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  - port: 50000
    targetPort: 50000
    name: jnlp
  selector:
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/component: core
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-agent
  namespace: jenkins
  labels:
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/component: agent
spec:
  type: ClusterIP
  ports:
  - port: 50000
    targetPort: 50000
    name: jnlp
  selector:
    app.kubernetes.io/name: jenkins
    app.kubernetes.io/component: core
